--- a/index.html
+++ b/index.html
@@ -8,18 +8,50 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Calorie Tracker App</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="goals.html">Goals</a></li>
-                    <li><a href="food-diary.html">Food Diary</a></li>
-                </ul>
-            </nav>
+    <div class="container">
+        <div class="dashboard">
+            <!-- Steps -->
+            <div class="box steps">
+                <h3>Steps</h3>
+                <p>5000 steps</p>
+            </div>
+            <!-- Workouts -->
+            <div class="box workouts">
+                <h3>Workouts</h3>
+                <p>30 mins</p>
+            </div>
+            <!-- Tips for Dieting -->
+            <div class="box diet-tips">
+                <h3>Diet Tips</h3>
+                <p>Drink plenty of water!</p>
+            </div>
+            <!-- Overview -->
+            <div class="box overview">
+                <h3>Overview</h3>
+                <p>Calories consumed: 1800</p>
+                <p>Calories burned: 300</p>
+            </div>
         </div>
+        
+        <div class="central-section">
+            <h1>Calorie Tracker App</h1>
+            <div class="calorie-info">
+                <h2>Today's Stats</h2>
+                <p>Calories Remaining: 1200</p>
+                <p>Calories Burned: 300</p>
+            </div>
+        </div>
+        
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="goals.html">Goals</a></li>
+                <li><a href="food-diary.html">Food Diary</a></li>
+            </ul>
+        </nav>
+    </div>
     </header>
 
     <main>
