--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <!-- Tips for Dieting -->
             <div class="box diet-tips">
-                <h3>Diet Tips</h3>
+                <h3>Goals</h3>
                 <p>Drink plenty of water!</p>
             </div>
             <!-- Overview -->
