--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 </head>
 <body>
-
+    <header>
+        <div class="container">
+            <h1>Calorie Tracker App</h1>
+        </div>
+    </header>
     <nav>
 
         <ul> 
