need to fix the scrolling error

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <!-- Tips for Dieting -->
             <div class="box diet-tips">
-                <h3>Goals</h3>
+                <h3>Tips</h3>
                 <p>Drink plenty of water!</p>
             </div>
             <!-- Overview -->
