--- a/goals.html
+++ b/goals.html
@@ -22,7 +22,7 @@
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="login.html">Login/Register</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="goals.html">Goals</a></li>
                 <li><a href="food-diary.html">Food Diary</a></li>
