--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <ul> 
             <li><a href="index.html">Home</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="login.html">Login/Register</a></li>
             <li><a href="profile.html">Profile</a></li>
             <li><a href="goals.html">Goals</a></li>
             <li><a href="food-diary.html">Food Diary</a></li>
