--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="login.html" class="active">Login/Register</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="goals.html">Goals</a></li>
                 <li><a href="food-diary.html">Food Diary</a></li>
@@ -31,15 +31,30 @@
 
     <main>
         <div class="container">
-            <h2>User Login</h2>
-            <form id="loginForm">
+            <div class="tab">
+                <button class="tablinks active" onclick="openTab(event, 'loginForm')">Login</button>
+                <button class="tablinks" onclick="openTab(event, 'registrationForm')">Register</button>
+            </div>
+            
+            <form id="loginForm" class="tabcontent">
+                <h2>Login</h2>
                 <label for="loginEmail">Email:</label><br>
                 <input type="email" id="loginEmail" name="email" required><br><br>
                 <label for="loginPassword">Password:</label><br>
                 <input type="password" id="loginPassword" name="password" required><br><br>
                 <button type="submit">Login</button>
+                <p id="loginMessage"></p>
             </form>
-            <p id="loginMessage"></p>
+            
+            <form id="registrationForm" class="tabcontent" style="display:none;">
+                <h2>Register</h2>
+                <label for="registerEmail">Email:</label><br>
+                <input type="email" id="registerEmail" name="email" required><br><br>
+                <label for="registerPassword">Password:</label><br>
+                <input type="password" id="registerPassword" name="password" required><br><br>
+                <button type="submit">Register</button>
+                <p id="registrationMessage"></p>
+            </form>
         </div>
     </main>
 
@@ -49,7 +64,8 @@
         </div>
     </footer>
 
-    <script src="js/auth.js"></script>
-    <script src="js/login.js"></script> 
+    <script src="js/login.js"></script>
+
+
 </body>
 </html>
